--- a/.travis.yml
+++ b/.travis.yml
@@ -74,8 +74,8 @@ jobs:
     - compiler: ghc-7.10.3
       addons: {"apt":{"sources":[{"sourceline":"deb http://ppa.launchpad.net/hvr/ghc/ubuntu xenial main","key_url":"https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x063dab2bdc0b3f9fcebc378bff3aeacef6f88286"}],"packages":["ghc-7.10.3","cabal-install-3.0"]}}
       os: linux
-  allow_failures:
-    - compiler: ghc-8.10.1
+  # allow_failures:
+  #   - compiler: ghc-8.10.1
 before_install:
   - HC=$(echo "/opt/$CC/bin/ghc" | sed 's/-/\//')
   - WITHCOMPILER="-w $HC"
