--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -125,25 +125,28 @@ library
       build-depends: ghc-boot
   hs-source-dirs:      src
 
-  if impl (ghc > 8.8.4)
-      hs-source-dirs: src-ghc810
+  if impl (ghc > 8.10.0)
+      hs-source-dirs: src-ghc90
   else
-    if impl (ghc > 8.6.5)
-        hs-source-dirs: src-ghc88
+    if impl (ghc > 8.8.4)
+        hs-source-dirs: src-ghc810
     else
-      if impl (ghc > 8.4.4)
-          hs-source-dirs: src-ghc86
+      if impl (ghc > 8.6.5)
+          hs-source-dirs: src-ghc88
       else
-        if impl (ghc > 8.2.2)
-            hs-source-dirs: src-ghc84
+        if impl (ghc > 8.4.4)
+            hs-source-dirs: src-ghc86
         else
-          if impl (ghc > 8.0.3)
-              hs-source-dirs: src-ghc82
+          if impl (ghc > 8.2.2)
+              hs-source-dirs: src-ghc84
           else
-            if impl (ghc > 7.10.3)
-                hs-source-dirs: src-ghc80
+            if impl (ghc > 8.0.3)
+                hs-source-dirs: src-ghc82
             else
-                hs-source-dirs: src-ghc710
+              if impl (ghc > 7.10.3)
+                  hs-source-dirs: src-ghc80
+              else
+                  hs-source-dirs: src-ghc710
 
   default-language:    Haskell2010
   if impl (ghc < 7.10.2)
@@ -157,25 +160,28 @@ Test-Suite test
   else
     hs-source-dirs:      tests
 
-  if impl (ghc > 8.8.4)
-      hs-source-dirs: src-ghc810
+  if impl (ghc > 8.10.0)
+      hs-source-dirs: src-ghc90
   else
-    if impl (ghc > 8.6.5)
-        hs-source-dirs: src-ghc88
+    if impl (ghc > 8.8.4)
+        hs-source-dirs: src-ghc810
     else
-      if impl (ghc > 8.4.4)
-          hs-source-dirs: src-ghc86
+      if impl (ghc > 8.6.5)
+          hs-source-dirs: src-ghc88
       else
-        if impl (ghc > 8.2.2)
-            hs-source-dirs: src-ghc84
+        if impl (ghc > 8.4.4)
+            hs-source-dirs: src-ghc86
         else
-          if impl (ghc > 8.0.3)
-              hs-source-dirs: src-ghc82
+          if impl (ghc > 8.2.2)
+              hs-source-dirs: src-ghc84
           else
-            if impl (ghc > 7.10.3)
-                hs-source-dirs: src-ghc80
+            if impl (ghc > 8.0.3)
+                hs-source-dirs: src-ghc82
             else
-                hs-source-dirs: src-ghc710
+              if impl (ghc > 7.10.3)
+                  hs-source-dirs: src-ghc80
+              else
+                  hs-source-dirs: src-ghc710
 
   main-is:             Test.hs
   other-modules:       Test.Common
