--- a/cabal.project
+++ b/cabal.project
@@ -36,6 +36,8 @@ repository head.hackage.ghc.haskell.org
 -- allow-newer:stm-2.5.0.0:base
 -- allow-newer:async-2.2.1:base
 
+-- constraint:Cabal==3.2.0.0
+
 package ghc-exactprint
   test-show-details: direct
 
