Prepare for v0.6.4 release

--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -1,5 +1,5 @@
 name:                ghc-exactprint
-version:             0.6.3.4
+version:             0.6.4
 synopsis:            ExactPrint for GHC
 description:         Using the API Annotations available from GHC 7.10.2, this
                      library provides a means to round trip any code that can
@@ -46,6 +46,7 @@ tested-with:         GHC == 7.10.3
                    , GHC == 8.8.4
                    , GHC == 8.10.1
                    , GHC == 8.10.2
+                   , GHC == 9.0.1
 extra-source-files:  ChangeLog
                      src-ghc710/Language/Haskell/GHC/ExactPrint/*.hs
                      tests/examples/failing/*.hs
