--- a/.github/workflows/haskell-ci.yml
+++ b/.github/workflows/haskell-ci.yml
@@ -28,6 +28,10 @@ jobs:
         include:
           - ghc: 9.0.1
             allow-failure: false
+          - ghc: 8.10.4
+            allow-failure: false
+          - ghc: 8.10.3
+            allow-failure: false
           - ghc: 8.10.2
             allow-failure: false
           - ghc: 8.10.1
