--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -42,6 +42,7 @@ extra-source-files:  ChangeLog
                      tests/examples/ghc86/*.hs
                      tests/examples/ghc88/*.hs
                      tests/examples/ghc90/*.hs
+                     tests/examples/ghc92/*.hs
                      tests/examples/pre-ghc810/*.hs
                      tests/examples/pre-ghc86/*.hs
                      tests/examples/pre-ghc90/*.hs
