--- a/.github/workflows/haskell-ci.yml
+++ b/.github/workflows/haskell-ci.yml
@@ -8,9 +8,9 @@
 #
 # For more information, see https://github.com/haskell-CI/haskell-ci
 #
-# version: 0.13.20210815
+# version: 0.13.20210823
 #
-# REGENDATA ("0.13.20210815",["github","ghc-exactprint.cabal","--ghcup-jobs"])
+# REGENDATA ("0.13.20210823",["github","ghc-exactprint.cabal","--ghcup-jobs"])
 #
 name: Haskell-CI
 on:
@@ -19,16 +19,16 @@ on:
 jobs:
   linux:
     name: Haskell-CI - Linux - ${{ matrix.compiler }}
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-18.04
     container:
-      image: buildpack-deps:focal
+      image: buildpack-deps:bionic
     continue-on-error: ${{ matrix.allow-failure }}
     strategy:
       matrix:
         include:
-          - compiler: ghc-9.2.0.20210706
+          - compiler: ghc-9.2.0.20210821
             compilerKind: ghc
-            compilerVersion: 9.2.0.20210806
+            compilerVersion: 9.2.0.20210821
             setup-method: ghcup
             allow-failure: true
       fail-fast: false
@@ -37,14 +37,10 @@ jobs:
         run: |
           apt-get update
           apt-get install -y --no-install-recommends gnupg ca-certificates dirmngr curl git software-properties-common libtinfo5
-          apt-get install -y build-essential git autoconf python3 libgmp-dev libncurses-dev
           mkdir -p "$HOME/.ghcup/bin"
           curl -sL https://downloads.haskell.org/ghcup/0.1.16.2/x86_64-linux-ghcup-0.1.16.2 > "$HOME/.ghcup/bin/ghcup"
           chmod a+x "$HOME/.ghcup/bin/ghcup"
-          # "$HOME/.ghcup/bin/ghcup" install ghc "$HCVER"
-          # "$HOME/.ghcup/bin/ghcup" install ghc -u https://gitlab.haskell.org/ghc/ghc/-/jobs/756283/artifacts/raw/ghc-x86_64-deb10-linux.tar.xz ghc-9.2.0.20210806
-          "$HOME/.ghcup/bin/ghcup" install ghc -u https://gitlab.haskell.org/ghc/ghc/-/jobs/756285/artifacts/raw/ghc-x86_64-ubuntu2004-linux.tar.xz ghc-9.2.0.20210806
-
+          "$HOME/.ghcup/bin/ghcup" install ghc "$HCVER"
           "$HOME/.ghcup/bin/ghcup" install cabal 3.4.0.0
         env:
           HCKIND: ${{ matrix.compilerKind }}
