--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,9 @@ dist-newstyle
 /.ghc.environment.*
 packages
 *.yaml.lock
+/tests/examples/ghc90-copied/
+/tests/examples/ghc92-copied/
+/hie.yaml
+/hie.yaml.cbl
+/hie.yaml.stack
+/ctags
