--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -15,8 +15,7 @@ author:              Alan Zimmerman, Matthew Pickering
 maintainer:          alan.zimm@gmail.com
 category:            Development
 build-type:          Simple
--- tested-with:         GHC == 9.2.1
-tested-with:         GHC == 9.2.0.20210821
+tested-with:         GHC == 9.2.1
 extra-source-files:  ChangeLog
                      tests/examples/failing/*.hs
                      tests/examples/ghc710-only/*.hs
