Starting to bring the Fixity processing from retrie and HSExpr
As discussed in
https://github.com/facebookincubator/retrie/issues/36#issuecomment-978202583

--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -56,6 +56,7 @@ Flag dev {
 library
   exposed-modules:     Language.Haskell.GHC.ExactPrint
                      , Language.Haskell.GHC.ExactPrint.ExactPrint
+                     , Language.Haskell.GHC.ExactPrint.Fixity
                      , Language.Haskell.GHC.ExactPrint.Lookup
                      , Language.Haskell.GHC.ExactPrint.Orphans
                      , Language.Haskell.GHC.ExactPrint.Parsers
