--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -1,5 +1,5 @@
 name:                ghc-exactprint
-version:             1.3.0
+version:             1.4.0
 synopsis:            ExactPrint for GHC
 description:         Using the API Annotations available from GHC 9.2.1, this
                      library provides a means to round trip any code that can
@@ -112,6 +112,7 @@ Test-Suite test
                      , bytestring
                      , containers >= 0.5
                      , ordered-containers
+                     , data-default
                      , Diff
                      , directory >= 1.2
                      , filepath  >= 1.4
