--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -80,12 +80,14 @@ library
                      , directory >= 1.2
                      , filepath  >= 1.4
                      , ghc       >= 9.2.1
-                     , ghc-paths >= 0.1
+                     -- , ghc-paths >= 0.1
                      , mtl       >= 2.2.1
                      , syb       >= 0.5
                      , free      >= 4.12
                      , fail      >= 4.9 && <4.10
                      , ghc-boot
+                     -- , Cabal
+                     -- , Cabal-syntax == 3.7.0.0
 
 
   default-language:    Haskell2010
