--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -17,6 +17,9 @@ category:            Development
 build-type:          Simple
 tested-with:         GHC == 9.2.1
                    , GHC == 9.2.2
+                   , GHC == 9.2.3
+                   , GHC == 9.2.4
+                   , GHC == 9.4.1
 extra-source-files:  ChangeLog
                      tests/examples/failing/*.hs
                      tests/examples/ghc710-only/*.hs
@@ -68,6 +71,10 @@ library
 
 
   hs-source-dirs:      src
+  if impl (ghc > 9.2.9)
+      hs-source-dirs: src-ghc94
+  else
+      hs-source-dirs: src-ghc92
   -- other-modules:
   -- other-extensions:
   GHC-Options:         -Wall -Wredundant-constraints
@@ -99,6 +106,10 @@ Test-Suite test
                          src
   else
     hs-source-dirs:      tests
+  if impl (ghc > 9.2.9)
+      hs-source-dirs: src-ghc94
+  else
+      hs-source-dirs: src-ghc92
 
   main-is:             Test.hs
   other-modules:       Test.Common
