--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -29,6 +29,7 @@ extra-source-files:  ChangeLog
                      tests/examples/ghc88/*.hs
                      tests/examples/ghc90/*.hs
                      tests/examples/ghc92/*.hs
+                     tests/examples/ghc94/*.hs
                      tests/examples/pre-ghc810/*.hs
                      tests/examples/pre-ghc86/*.hs
                      tests/examples/pre-ghc90/*.hs
