--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -1,12 +1,12 @@
 name:                ghc-exactprint
-version:             1.5.0
+version:             1.6.0
 synopsis:            ExactPrint for GHC
 description:         Using the API Annotations available from GHC 9.2.1, this
                      library provides a means to round trip any code that can
                      be compiled by GHC, currently excluding lhs files.
                      .
-                     Note: requires GHC 9.2 or later. For GHC versions from
-                           7.10.2 to 9.0.* see this library with versions < 1.1
+                     Note: requires GHC 9.4.*. For earlier GHC
+                     versions see lower version numbers.
                      .
 
 license:             BSD3
