--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -17,6 +17,7 @@ category:            Development
 build-type:          Simple
 tested-with:         GHC == 9.4.1
                    , GHC == 9.4.2
+                   , GHC == 9.4.3
 extra-source-files:  ChangeLog
                      tests/examples/failing/*.hs
                      tests/examples/ghc710-only/*.hs
