--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -1,5 +1,5 @@
 name:                ghc-exactprint
-version:             1.6.1
+version:             1.6.1.1
 synopsis:            ExactPrint for GHC
 description:         Using the API Annotations available from GHC 9.2.1, this
                      library provides a means to round trip any code that can
@@ -18,6 +18,7 @@ build-type:          Simple
 tested-with:         GHC == 9.4.1
                    , GHC == 9.4.2
                    , GHC == 9.4.3
+                   , GHC == 9.4.4
 extra-source-files:  ChangeLog
                      tests/examples/failing/*.hs
                      tests/examples/ghc710-only/*.hs
