--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ packages
 /tests/examples/ghc90-copied/
 /tests/examples/ghc92-copied/
 /tests/examples/ghc94-copied/
+/tests/examples/ghc96-copied/
 /hie.yaml
 /hie.yaml.cbl
 /hie.yaml.stack
