Update from doing hackage roundtrip

--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -152,7 +152,7 @@ executable roundtrip
                , filepath
                , ghc
                , ghc-exactprint
-               -- , ghc-paths
+               , ghc-paths
                , syb
                , temporary
                , time
