--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -19,6 +19,7 @@ tested-with:         GHC == 9.4.1
                    , GHC == 9.4.2
                    , GHC == 9.4.3
                    , GHC == 9.4.4
+                   , GHC == 9.6.1
 extra-source-files:  ChangeLog
                      tests/examples/failing/*.hs
                      tests/examples/ghc710-only/*.hs
