--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -115,14 +115,13 @@ Test-Suite test
                      , data-default
                      , Diff
                      , directory >= 1.2
+                     , extra
                      , filepath  >= 1.4
                      , ghc       >= 9.4.1
                      , ghc-paths  >= 0.1
                      , mtl        >= 2.2.1
                      , syb        >= 0.5
                      , silently   >= 1.2
-                     , filemanip  >= 0.3
-                     -- , unix-compat >= 0.7
                      -- for the lib only
                      , fail >= 4.9 && <4.10
                      , ghc-boot
