Prepare release 1.6.1.2 for GHC 9.4.x

--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -1,5 +1,5 @@
 name:                ghc-exactprint
-version:             1.6.1.1
+version:             1.6.1.2
 synopsis:            ExactPrint for GHC
 description:         Using the API Annotations available from GHC 9.2.1, this
                      library provides a means to round trip any code that can
@@ -19,6 +19,7 @@ tested-with:         GHC == 9.4.1
                    , GHC == 9.4.2
                    , GHC == 9.4.3
                    , GHC == 9.4.4
+                   , GHC == 9.4.5
 extra-source-files:  ChangeLog
                      tests/examples/failing/*.hs
                      tests/examples/ghc710-only/*.hs
