GHC 9.8.1-alpha1 first cut
Compiles, passes most tests.

Cases: 3347  Tried: 3347  Errors: 6  Failures: 3

--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -17,7 +17,8 @@ category:            Development
 build-type:          Simple
 tested-with:         GHC == 9.6.1,
                      GHC == 9.6.2,
-                     GHC == 9.6.3
+                     GHC == 9.6.3,
+                     GHC == 9.8.1
 extra-source-files:  ChangeLog
                      tests/examples/failing/*.hs
                      tests/examples/ghc710-only/*.hs
@@ -148,6 +149,7 @@ executable roundtrip
                , base
                , containers
                , directory
+               , extra
                , filemanip
                , filepath
                , ghc
@@ -169,6 +171,7 @@ executable static
   if flag (roundtrip)
     build-depends: base
                  , directory
+                 , extra
                  , filemanip
                  , filepath
                  , ghc
@@ -187,6 +190,7 @@ executable prepare-hackage
     build-depends: base
                  , containers
                  , directory
+                 , extra
                  , filemanip
                  , filepath
                  , ghc       >= 9.4.1
