works with my ghc-9.8 patches, one missing
Still need https://gitlab.haskell.org/ghc/ghc/-/issues/23885

--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -30,6 +30,7 @@ extra-source-files:  ChangeLog
                      tests/examples/ghc92/*.hs
                      tests/examples/ghc94/*.hs
                      tests/examples/ghc96/*.hs
+                     tests/examples/ghc98/*.hs
                      tests/examples/pre-ghc810/*.hs
                      tests/examples/pre-ghc86/*.hs
                      tests/examples/pre-ghc90/*.hs
